--- a/dashboard/public/service-management.html
+++ b/dashboard/public/service-management.html
@@ -466,6 +466,8 @@
         </div>
     </div>
 
+    <!-- Socket.IO -->
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         function loadServices() {
             const socket = io();
