--- a/dashboard/public/config-editor.html
+++ b/dashboard/public/config-editor.html
@@ -577,6 +577,8 @@
         </div>
     </div>
 
+    <!-- Socket.IO -->
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         let originalContent = '';
         let currentFile = '.env';
