--- a/dashboard/public/network-status.html
+++ b/dashboard/public/network-status.html
@@ -578,6 +578,8 @@
         </div>
     </div>
 
+    <!-- Socket.IO -->
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         function runTest() {
             const socket = io();
