Add dashboard.js to all pages for version display and control buttons - Include dashboard.js in logs-viewer, service-management, network-status, and config-editor - Enables version/commit display on all pages - Enables Git Pull and Restart buttons to work on all pages - Fixes issue where control buttons only worked on main dashboard

--- a/dashboard/public/logs-viewer.html
+++ b/dashboard/public/logs-viewer.html
@@ -378,6 +378,7 @@
 
     <!-- Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="dashboard.js"></script>
     <script>
         let autoScroll = true;
         let isPaused = false;
