--- a/dashboard/public/network-status.html
+++ b/dashboard/public/network-status.html
@@ -580,6 +580,7 @@
 
     <!-- Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="dashboard.js"></script>
     <script>
         function runTest() {
             const socket = io();
