--- a/dashboard/public/service-management.html
+++ b/dashboard/public/service-management.html
@@ -468,6 +468,7 @@
 
     <!-- Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="dashboard.js"></script>
     <script>
         function loadServices() {
             const socket = io();
