--- a/dashboard/public/config-editor.html
+++ b/dashboard/public/config-editor.html
@@ -579,6 +579,7 @@
 
     <!-- Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="dashboard.js"></script>
     <script>
         let originalContent = '';
         let currentFile = '.env';
