fix: resolve layout issues and module path error

--- a/dashboard/public/network-status.html
+++ b/dashboard/public/network-status.html
@@ -441,8 +441,6 @@
                             <span class="connectivity-label">Status</span>
                             <span class="status-badge">⏳ Loading...</span>
                         </div>
-                    </div>
-                        </div>
                         <div style="display: flex; justify-content: space-between; align-items: center;">
                             <span class="connectivity-label">Gateway</span>
                             <span class="status-badge badge-connected">✓ Reachable</span>
@@ -474,7 +472,7 @@
 
             <!-- Network Interfaces -->
             <div style="margin-top: 30px;">
-                <h3 style="color: #87ceeb; margin-bottom: 15px;">🔌 Network Interfaces</h3>
+                <h3 style="color: #2c3e50; margin-bottom: 15px; font-size: 1.1rem; font-weight: 600;">🔌 Network Interfaces</h3>
                 <table class="interfaces-table">
                     <thead>
                         <tr>
@@ -495,7 +493,7 @@
 
             <!-- Connectivity Checks -->
             <div style="margin-top: 30px;">
-                <h3 style="color: #87ceeb; margin-bottom: 15px;">✓ Connectivity Checks</h3>
+                <h3 style="color: #2c3e50; margin-bottom: 15px; font-size: 1.1rem; font-weight: 600;">✓ Connectivity Checks</h3>
                 <div class="connectivity-checks">
                     <div class="check-item">
                         <div class="check-icon">🌍</div>
@@ -530,7 +528,7 @@
 
             <!-- Bandwidth Usage -->
             <div style="margin-top: 30px;">
-                <h3 style="color: #87ceeb; margin-bottom: 15px;">📊 Bandwidth Usage</h3>
+                <h3 style="color: #2c3e50; margin-bottom: 15px; font-size: 1.1rem; font-weight: 600;">📊 Bandwidth Usage</h3>
                 <div class="bandwidth-chart" id="bandwidth-chart">
                     <p style="text-align: center; color: #999;">Waiting for bandwidth data from server...</p>
                 </div>
@@ -538,7 +536,7 @@
 
             <!-- Quick Connectivity Test -->
             <div class="quick-test">
-                <h3 style="color: #87ceeb; margin: 0 0 10px 0;">🧪 Quick Connectivity Test</h3>
+                <h3 style="color: #2c3e50; margin: 0 0 10px 0; font-size: 1.1rem; font-weight: 600;">🧪 Quick Connectivity Test</h3>
                 <button class="test-btn" onclick="runTest()">▶ Run Full Test Suite</button>
                 <div class="test-result" id="test-result" style="display: none; margin-top: 10px; padding: 10px; background: #f5f5f5; border-radius: 4px; color: #2c3e50;"></div>
             </div>
