--- a/dashboard/public/database.html
+++ b/dashboard/public/database.html
@@ -44,23 +44,23 @@
                     <span class="navbar-icon">📊</span>
                     <span class="navbar-label">Dashboard</span>
                 </a>
-                <a href="logs-viewer-demo.html" class="navbar-item navbar-item-1" title="Real-Time Log Viewer">
+                <a href="logs-viewer.html" class="navbar-item navbar-item-1" title="Real-Time Log Viewer">
                     <span class="navbar-icon">📋</span>
                     <span class="navbar-label">Logs</span>
                 </a>
-                <a href="service-management-demo.html" class="navbar-item navbar-item-2" title="Service Status & Management">
+                <a href="service-management.html" class="navbar-item navbar-item-2" title="Service Status & Management">
                     <span class="navbar-icon">🔧</span>
                     <span class="navbar-label">Services</span>
                 </a>
-                <a href="config-editor-demo.html" class="navbar-item navbar-item-3" title="Configuration Editor">
+                <a href="config-editor.html" class="navbar-item navbar-item-3" title="Configuration Editor">
                     <span class="navbar-icon">⚙️</span>
                     <span class="navbar-label">Config</span>
                 </a>
-                <a href="network-status-demo.html" class="navbar-item navbar-item-5" title="Network & Connectivity Status">
+                <a href="network-status.html" class="navbar-item navbar-item-5" title="Network & Connectivity Status">
                     <span class="navbar-icon">🌐</span>
                     <span class="navbar-label">Network</span>
                 </a>
-                <a href="reminder-management-demo.html" class="navbar-item navbar-item-7" title="Reminder Management Interface">
+                <a href="reminder-management.html" class="navbar-item navbar-item-7" title="Reminder Management Interface">
                     <span class="navbar-icon">⏰</span>
                     <span class="navbar-label">Reminders</span>
                 </a>
